[gd_scene load_steps=17 format=3 uid="uid://lqajeeugb813"]

[ext_resource type="Texture2D" uid="uid://de1dn1yv2o8c7" path="res://assets/Background/Green.png" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://c1vk6foofgifk" path="res://assets/Terrain/Terrain (16x16).png" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://d2ekblqtwxfk1" path="res://scenes/main_character.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://ra20gpt20d73" path="res://scenes/collectable.tscn" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://ltd3pie3r6t6" path="res://scripts/game_manager.gd" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://brm30nfn6yog7" path="res://scenes/Level2.tscn" id="6_ecr63"]
[ext_resource type="PackedScene" uid="uid://ba8t5vcglw4vc" path="res://scenes/trophy.tscn" id="6_tefeu"]
[ext_resource type="PackedScene" uid="uid://c8d17gls54d7e" path="res://scenes/mooshroom.tscn" id="7_kbo48"]
[ext_resource type="FontFile" uid="uid://baw3wsso6ynu4" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://baukqmwr8y35w" path="res://scenes/killzone.tscn" id="8_4dyl1"]
[ext_resource type="Texture2D" uid="uid://dqv5wj8s0yx7t" path="res://assets/heart/1.png" id="9_n34uq"]
[ext_resource type="Script" uid="uid://bdvlkec2mcbjs" path="res://scripts/pause.gd" id="12_jxjwb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jyhfs"]
texture = ExtResource("2_sugp2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.0576, -8, -3.23746)
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -3.0576, -8, -3.23746)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_tbgi4"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jyhfs")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jxjwb"]

[sub_resource type="GDScript" id="GDScript_o6xl0"]
script/source = "extends Panel


@onready var point_label = $Points
var current_point = 0

func add_point():
	current_point += 1
	point_label.text = \"Points = \" + str(current_point)
	
"

[node name="Node" type="Node"]

[node name="SceneObjects" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="SceneObjects"]
texture_filter = 1
offset_right = 3716.0
offset_bottom = 627.0
texture = ExtResource("1_0wfyh")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="SceneObjects"]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_tbgi4")
format = 2
layer_0/tile_data = PackedInt32Array(851968, 458752, 0, 851969, 458752, 0, 851970, 458752, 0, 851971, 458752, 0, 851972, 458752, 0, 851973, 458752, 0, 851974, 458752, 0, 851975, 458752, 0, 851976, 458752, 0, 851977, 524288, 0, 851979, 393216, 0, 851980, 458752, 0, 851981, 458752, 0, 851982, 458752, 0, 851983, 458752, 0, 851984, 458752, 0, 851985, 458752, 0, 851986, 524288, 0, 851988, 393216, 0, 851989, 458752, 0, 851990, 458752, 0, 851991, 458752, 0, 720896, 458752, 1, 786432, 458752, 1, 720897, 458752, 1, 786433, 458752, 1, 720898, 524288, 1, 786434, 524288, 1, 655360, 458752, 0, 655361, 655360, 1, 655362, 524288, 1, 589824, 458752, 1, 589825, 458752, 1, 589826, 524288, 1, 458752, 458752, 1, 458753, 458752, 1, 458754, 458752, 1, 524288, 458752, 1, 524289, 458752, 1, 524290, 458752, 1, 393216, 458752, 1, 393218, 458752, 0, 327680, 458752, 0, 327681, 524288, 0, 524291, 524288, 2, 458755, 524288, 1, 393219, 524288, 0, 393217, 589824, 1, 786439, 393216, 0, 786440, 458752, 0, 786441, 524288, 0, 720907, 393216, 0, 786443, 393216, 1, 720908, 458752, 0, 786444, 458752, 1, 720909, 524288, 0, 786445, 524288, 1, 720912, 393216, 0, 786448, 393216, 1, 720913, 458752, 0, 786449, 458752, 1, 720914, 524288, 0, 786450, 524288, 1, 589844, 393216, 0, 655380, 393216, 1, 589845, 458752, 0, 655381, 458752, 1, 589846, 458752, 0, 655382, 458752, 1, 589847, 524288, 0, 655383, 524288, 1, 720916, 393216, 1, 786452, 393216, 2, 720917, 458752, 1, 786453, 458752, 2, 720918, 589824, 1, 786454, 458752, 2, 720919, 524288, 0, 786455, 524288, 2, 458768, 393216, 0, 524304, 393216, 2, 458769, 524288, 0, 524305, 524288, 2, 327687, 393216, 0, 393223, 393216, 1, 458759, 393216, 2, 327688, 524288, 0, 393224, 524288, 1, 458760, 524288, 2, 327692, 393216, 0, 393228, 393216, 2, 327693, 458752, 0, 393229, 458752, 2, 327694, 524288, 0, 393230, 524288, 2, 327689, 1114112, 1, 327690, 1179648, 1, 327691, 1245184, 1, 720910, 1114112, 1, 720911, 1245184, 1, 917503, 393216, 0, 851992, 458752, 0, 851967, 524288, 1, 786431, 524288, 1, 720895, 524288, 1, 655359, 524288, 1, 589823, 524288, 1, 524287, 524288, 1, 458751, 524288, 1, 393215, 524288, 1, 327679, 524288, 1, 262143, 524288, 1, 196607, 524288, 1, 131071, 524288, 1, 65535, 524288, 1, 851993, 458752, 0, 851994, 458752, 0, 851995, 458752, 0, 851996, 458752, 0, 851997, 458752, 0, 851998, 458752, 0, 851999, 458752, 0, 852000, 458752, 0, 852001, 458752, 0, 852002, 458752, 0, 852003, 458752, 0, 852004, 458752, 0, 852005, 458752, 0, 852006, 458752, 0, 852007, 458752, 0, 852008, 458752, 0, 852009, 458752, 0, 852010, 458752, 0, 852011, 458752, 0, 852012, 458752, 0, 852013, 458752, 0, 852014, 458752, 0, 852015, 524288, 0, 852019, 393216, 0, 852020, 458752, 0, 852021, 458752, 0, 852022, 458752, 0, 852023, 458752, 0, 852024, 458752, 0, 852025, 458752, 0, 852026, 458752, 0, 852027, 458752, 0, 852028, 458752, 0, 852029, 458752, 0, 852030, 458752, 0, 852031, 458752, 0, 852032, 458752, 0, 852033, 458752, 0, 852034, 458752, 0, 852035, 458752, 0, 852036, 458752, 0, 852037, 458752, 0, 852038, 458752, 0, 852039, 458752, 0, 852040, 458752, 0, 852041, 458752, 0, 852042, 458752, 0, 852043, 458752, 0, 852044, 524288, 0, -65511, 458752, 2, -65510, 458752, 2, -65509, 458752, 2, -65508, 458752, 2, -65507, 458752, 2, -65506, 458752, 2, -65505, 458752, 2, -65504, 458752, 2, -65503, 458752, 2, -65502, 458752, 2, -65501, 458752, 2, -65500, 458752, 2, -65499, 458752, 2, -65498, 458752, 2, -65497, 458752, 2, -65496, 458752, 2, -65495, 458752, 2, -65494, 458752, 2, -65493, 458752, 2, -65492, 458752, 2, -65491, 458752, 2, -65490, 458752, 2, -65489, 458752, 2, -65488, 458752, 2, -65487, 458752, 2, -65486, 458752, 2, -65485, 458752, 2, -65484, 458752, 2, -65483, 458752, 2, -65482, 458752, 2, -65481, 458752, 2, -65480, 458752, 2, -65479, 458752, 2, -65478, 458752, 2, -65477, 458752, 2, -65476, 458752, 2, -65475, 458752, 2, -65474, 458752, 2, -65473, 458752, 2, -65472, 458752, 2, -65471, 458752, 2, -65470, 458752, 2, -65469, 458752, 2, -65468, 458752, 2, -65467, 458752, 2, -65466, 458752, 2, -65465, 458752, 2, -65464, 458752, 2, -65463, 458752, 2, -65462, 458752, 2, -65461, 458752, 2, -65460, 458752, 2, -65536, 458752, 2, -65535, 458752, 2, -65534, 458752, 2, -65533, 458752, 2, -65532, 458752, 2, -65531, 458752, 2, -65530, 458752, 2, -65529, 458752, 2, -65528, 458752, 2, -65527, 458752, 2, -65526, 458752, 2, -65525, 458752, 2, -65524, 458752, 2, -65523, 458752, 2, -65522, 458752, 2, -65521, 458752, 2, -65520, 458752, 2, -65519, 458752, 2, -65518, 458752, 2, -65517, 458752, 2, -65516, 458752, 2, -65515, 458752, 2, -65514, 458752, 2, -65513, 458752, 2, -65512, 458752, 2, -1, 458752, 1, -65459, 458752, 1, 77, 393216, 1, 65613, 393216, 1, 131149, 393216, 1, 196685, 393216, 1, 262221, 393216, 1, 327757, 393216, 1, 393293, 393216, 1, 458829, 393216, 1, 524365, 393216, 1, 589901, 393216, 1, 655437, 393216, 1, 720973, 393216, 1, 786509, 393216, 1, 852045, 524288, 0, 131092, 393216, 0, 131093, 458752, 0, 131094, 524288, 0, 196628, 393216, 2, 196629, 458752, 2, 196630, 524288, 2, 720925, 524288, 1, 786461, 524288, 2, 655389, 524288, 1, 589853, 524288, 1, 524317, 524288, 1, 458781, 524288, 1, 393245, 524288, 1, 327709, 524288, 1, 262173, 524288, 1, 196637, 524288, 1, 655386, 393216, 2, 589850, 393216, 1, 524314, 393216, 1, 458778, 393216, 1, 393242, 393216, 1, 327706, 393216, 1, 262170, 393216, 1, 196634, 393216, 1, 131098, 393216, 1, 65562, 393216, 1, 26, 393216, 1, 655387, 1245184, 1, 786460, 393216, 2, 524316, 1114112, 1, 393243, 1245184, 1, 262172, 1114112, 1, 131099, 1245184, 1, 131101, 524288, 1, 31, 524288, 1, 65567, 524288, 1, 131103, 458752, 1, 196639, 458752, 1, 262175, 524288, 1, 327711, 524288, 1, 393247, 524288, 1, 458783, 524288, 1, 524319, 589824, 1, 589856, 458752, 2, 589855, 458752, 2, 589857, 458752, 2, 589858, 458752, 1, 655394, 393216, 2, 655395, 524288, 2, 589859, 524288, 1, 524323, 524288, 0, 524322, 458752, 0, 524321, 458752, 0, 524320, 458752, 0, 131104, 458752, 0, 196640, 458752, 1, 131105, 458752, 0, 196641, 458752, 1, 131106, 458752, 0, 196642, 458752, 1, 131107, 524288, 0, 196643, 524288, 1, 262180, 1245184, 1, 262179, 1179648, 1, 262178, 1179648, 1, 262177, 1179648, 1, 262176, 1179648, 1, 589875, 393216, 0, 655411, 393216, 1, 720947, 393216, 1, 786483, 393216, 2, 589876, 458752, 0, 655412, 458752, 1, 720948, 458752, 1, 786484, 458752, 2, 589877, 458752, 0, 655413, 458752, 1, 720949, 589824, 1, 786485, 458752, 2, 589878, 524288, 0, 655414, 524288, 1, 720950, 524288, 0, 786486, 524288, 2, 720936, 393216, 0, 786472, 393216, 1, 720937, 458752, 0, 786473, 458752, 1, 720938, 524288, 0, 786474, 524288, 1, 720939, 1114112, 1, 720940, 1245184, 1, 720941, 393216, 0, 786477, 393216, 1, 720942, 458752, 0, 786478, 458752, 1, 720943, 524288, 0, 786479, 524288, 1, 720955, 393216, 0, 786491, 393216, 1, 589884, 393216, 0, 655420, 393216, 1, 458813, 393216, 0, 524349, 393216, 1, 458815, 524288, 0, 458814, 458752, 0, 524350, 458752, 1, 589886, 458752, 1, 589885, 458752, 1, 655421, 458752, 1, 720957, 458752, 1, 720956, 458752, 1, 786492, 458752, 1, 786493, 458752, 1, 786494, 458752, 1, 720958, 458752, 1, 655422, 458752, 1, 524351, 524288, 1, 589887, 589824, 1, 655423, 458752, 1, 720959, 524288, 1, 786495, 524288, 1, 589888, 524288, 0, 589889, 524288, 0, 655425, 524288, 2, 655424, 458752, 2, 589898, 393216, 1, 655434, 393216, 2, 524362, 393216, 1, 458826, 393216, 1, 393290, 393216, 1, 327754, 393216, 1, 262218, 393216, 1, 196682, 393216, 1, 131146, 393216, 1, 65610, 393216, 1, 74, 393216, 1, 786508, 393216, 0, 655435, 1245184, 1, 524364, 1114112, 1, 393291, 1245184, 1, 262220, 1114112, 1, 131147, 1245184, 1, 131144, 1114112, 1, 131145, 1179648, 1, 262213, 1114112, 1, 262214, 1245184, 1, 393282, 1114112, 1, 393283, 1245184, 1, 327719, 393216, 0, 393255, 393216, 2, 327720, 458752, 0, 393256, 458752, 2, 327721, 524288, 0, 393257, 524288, 2, 327726, 393216, 0, 393262, 393216, 2, 327727, 458752, 0, 393263, 458752, 2, 327728, 524288, 0, 393264, 524288, 2, 196660, 393216, 0, 262196, 393216, 1, 327732, 393216, 2, 196661, 524288, 0, 262197, 524288, 1, 327733, 524288, 2, 196662, 1114112, 1, 196663, 1179648, 1, 196664, 1245184, 1, 196665, 393216, 0, 262201, 393216, 2, 196666, 524288, 0, 262202, 524288, 2, 655431, 393216, 0, 655432, 524288, 0, 655426, 1114112, 1, 655427, 1179648, 1, 655428, 1179648, 1, 655429, 1179648, 1, 655430, 1245184, 1)

[node name="CharacterBody2D" parent="SceneObjects" instance=ExtResource("3_sugp2")]
position = Vector2(151, 239)

[node name="Camera2D" type="Camera2D" parent="SceneObjects/CharacterBody2D"]
position_smoothing_enabled = true

[node name="Cherry" type="Node" parent="SceneObjects"]

[node name="Collectable" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(395, 217)

[node name="Collectable2" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(481, 217)

[node name="Collectable3" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(566, 217)

[node name="Collectable4" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(655, 217)

[node name="Collectable5" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(815, 314)

[node name="Collectable6" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1089, 408)

[node name="Collectable7" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1025, 408)

[node name="Collectable8" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(721, 504)

[node name="Collectable9" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(596, 503)

[node name="Collectable10" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(846, 505)

[node name="Collectable11" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(407, 553)

[node name="Collectable12" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(238, 600)

[node name="Collectable13" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(45, 217)

[node name="Collectable14" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1321, 457)

[node name="Collectable15" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1369, 362)

[node name="Collectable16" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1319, 263)

[node name="Collectable17" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1368, 170)

[node name="Collectable18" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1320, 71)

[node name="Collectable19" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1464, 245)

[node name="Collectable20" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1464, 395)

[node name="Collectable21" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1467, 592)

[node name="Collectable22" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(2109, 500)

[node name="Collectable23" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1575, 355)

[node name="Collectable24" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1567, 71)

[node name="Collectable25" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1675, 72)

[node name="Collectable26" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(1945, 214)

[node name="Collectable27" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(2283, 215)

[node name="Collectable28" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(2656, 119)

[node name="Collectable29" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(2543, 405)

[node name="Collectable30" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(2849, 502)

[node name="Collectable31" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(2902, 407)

[node name="Collectable32" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(2998, 310)

[node name="Collectable33" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3219, 259)

[node name="Collectable34" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3505, 73)

[node name="Collectable35" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3284, 402)

[node name="Collectable36" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3461, 406)

[node name="Collectable37" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3107, 599)

[node name="Collectable38" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3168, 598)

[node name="Collectable39" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3236, 598)

[node name="Collectable40" parent="SceneObjects/Cherry" instance=ExtResource("4_jyhfs")]
position = Vector2(3304, 599)

[node name="Trophy" parent="SceneObjects" instance=ExtResource("6_tefeu")]
position = Vector2(709, -122)
target_level = ExtResource("6_ecr63")

[node name="Mooshrooms" type="Node" parent="SceneObjects"]

[node name="Mooshroom" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(694, 207)

[node name="Mooshroom2" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(886, 494)

[node name="Mooshroom3" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(309, 590)

[node name="Mooshroom4" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(1313, 588)

[node name="Mooshroom5" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(1890, 589)

[node name="Mooshroom6" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(1701, 58)

[node name="Mooshroom7" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(2806, 109)

[node name="Mooshroom8" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(2801, 588)

[node name="Mooshroom9" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(3620, 588)

[node name="Mooshroom10" parent="SceneObjects/Mooshrooms" instance=ExtResource("7_kbo48")]
position = Vector2(2613, 396)

[node name="KillZone" parent="SceneObjects" instance=ExtResource("8_4dyl1")]
position = Vector2(510, 802)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneObjects/KillZone"]
shape = SubResource("WorldBoundaryShape2D_jxjwb")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("hearts")]
script = ExtResource("5_tbgi4")
hearts = [NodePath("../UI/Hearts/HBoxContainer/Heart"), NodePath("../UI/Hearts/HBoxContainer/Heart2"), NodePath("../UI/Hearts/HBoxContainer/Heart3")]

[node name="Timer" type="Timer" parent="GameManager"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 28.0
offset_top = 23.0
offset_right = 205.0
offset_bottom = 78.0
script = SubResource("GDScript_o6xl0")

[node name="Level" type="Label" parent="UI/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 8.0
offset_right = 67.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_o6xl0")
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Points" type="Label" parent="UI/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 32.0
offset_right = 67.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("7_o6xl0")
text = "Points = 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hearts" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -205.0
offset_top = 23.0
offset_right = -28.0
offset_bottom = 78.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Hearts"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -24.0
offset_right = 81.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Heart" type="TextureRect" parent="UI/Hearts/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("9_n34uq")
expand_mode = 2

[node name="Heart2" type="TextureRect" parent="UI/Hearts/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("9_n34uq")
expand_mode = 2

[node name="Heart3" type="TextureRect" parent="UI/Hearts/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("9_n34uq")
expand_mode = 2

[node name="Pause" type="Node" parent="UI"]
script = ExtResource("12_jxjwb")

[node name="PausePanel" type="Panel" parent="UI/Pause"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Pause/PausePanel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 193.0
offset_bottom = 209.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("7_o6xl0")
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -81.0
offset_right = 50.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
alignment = 1

[node name="Resume_Button" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("7_o6xl0")
text = "Reasume Game"

[node name="Restart_Button" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("7_o6xl0")
text = "Restart Game"

[node name="Menu_Button" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("7_o6xl0")
text = "Main Menu"

[node name="Quit_Button" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("7_o6xl0")
text = "Quit Game"

[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/Resume_Button" to="UI/Pause" method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/Restart_Button" to="UI/Pause" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/Menu_Button" to="UI/Pause" method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/Quit_Button" to="UI/Pause" method="_on_quit_button_pressed"]
